--- a/usedAuction_mini2/.classpath
+++ b/usedAuction_mini2/.classpath
@@ -4,36 +4,12 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/catalina-storeconfig.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/ecj-4.6.3.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/jaspic-api.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-jni.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-util-scan.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/tomcat-websocket.jar"/>
-	<classpathentry kind="lib" path="C:/java94/bin/tomcat8.5/lib/websocket-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/tomcat8.5">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Tomcat v8.5">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
